css/styles.css
* {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

::-webkit-scrollbar {
    display: none;
}

html {
    font-size: 10px;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    font-family: sans-serif;
}

body {
    font-family: "Lato", sans-serif;
    margin: 0;
    font-size: 14px;
    line-height: 1.5;
    color: #333;
    scroll-behavior: smooth;
}

.serif {
    font-family: "Old Standard TT", serif;
}

.link {
    color: rgb(91, 119, 211);
    text-decoration: none;
}

.link:hover {
    text-decoration: overline underline;
    /*font-weight: 600;*/
}

.link-section {
    padding-top: 1em;
    -webkit-align-self: baseline;
    -ms-flex-item-align: baseline;
    align-self: baseline;
}

.mobile-divider {
    width: 90%;
    border-bottom: 1px solid #4d4d4d;
}

.smooth-container {
    scroll-behavior: smooth;
}

.fakeScroll {
    position: absolute;
    top: 0;
    width: 0;
    height: 0;
    visibility: hidden;
    display: none;
}

.centralContainer {
    margin: 0 auto;
    width: 100%;
    height: -webkit-calc(100vh - 58px);
    height: calc(100vh - 58px);
}

.desktop {
    display: block;
}

/* .desktop.header {
    position: fixed;
    top: 50%;
    width: 300px;

    -webkit-transform: translateY(-50%);

    -ms-transform: translateY(-50%);

    transform: translateY(-50%);
} */

.desktop > .name {
    font-size: 3rem;
    font-weight: 300;
    text-align: right;
    line-height: 1.25em;
}

.desktop > .role {
    color: #adadad;
    font-size: 2.5rem;
    line-height: 1.25em;
    text-align: right;
}

.desktop.nav {
    /* padding: 0 2rem; */
}

/* .desktop > .nav {
    border-top: 1px solid #4d4d4d;
    text-align: center;
    padding: 0.5rem;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
} */

.desktop.nav a {
    padding: 0.5rem 1rem;
    cursor: pointer;
    text-decoration: none;
    font-size: 1.75rem;
    color: #333;
}

.desktop > .nav a:hover {
    text-decoration: overline underline;
}

.activeSection {
    text-decoration: overline underline !important;
}

.mainInfo > .name {
    font-size: 2.25rem;
    /*line-height: 60px;*/
    font-weight: 300;
    /* padding-left: 1rem; */
}

.navButtons {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
}

.moreInfo {
    text-align: center;
    /* display: none; */
    display: block;
    height: 0;
    opacity: 0;
    -webkit-transition-duration: 200ms;
         -o-transition-duration: 200ms;
            transition-duration: 200ms;
    -webkit-transition-timing-function: ease-out;
         -o-transition-timing-function: ease-out;
            transition-timing-function: ease-out;
}


.menuOpen {
    /* display: block !important; */
    display: block;
    /* height: fit-content; */
    /* height: auto; */
    opacity: 1;
    height: 191px;
}

.moreInfo > .role {
    color: #adadad;
    font-size: 2rem;
    line-height: 1.25em;
    text-align: left;
    padding: 0 2.5rem 1rem;
}

.moreInfo > .nav {
    border-top: 1px solid #4d4d4d;
    font-size: 1.75rem;
    text-align: center;
    padding: 0.5rem;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
}

.moreInfo > .nav a {
    padding: 0.5rem 1rem;
    cursor: pointer;
    text-decoration: none;
    font-size: 1.75rem;
    color: #333;
}

.moreInfo > .nav a:hover {
    text-decoration: overline underline;
}

.mainInfo {
    width: 100%;
    padding: 2.5rem 2.5rem 0;
    /*height: 60px;*/
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    cursor: pointer;
}

/* .mobile {
    display: none;
} */

.mobileButton {
    display: none;
    background-image: url("../assets/img/menu-icon.svg");
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    width: 32px;
    height: 32px;
}

.section {
    /* - amount of left nav size + margin left */
    /* width: -webkit-calc(100% - 340px);
    width: calc(100% - 340px);  */
    width: 100%; 
    position: relative;
    /* left: 300px; */
    /* height: 100%; */
    min-height: 100%;
    /* margin-left: 40px; */
    background: #fff;
    padding: 0 1em;

    display: -webkit-box;

    display: -webkit-flex;

    display: -ms-flexbox;

    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-transition-duration: 500ms;
    -o-transition-duration: 500ms;
    transition-duration: 500ms;
    visibility: visible;
    opacity: 1;
}

.hidden {
    visibility: hidden !important;
    opacity: 0 !important;
    display: none;
}

.aboutSection {
    /*transform: translateY(-100%)*/
}

.videoSection {
    padding: 0;
}

.videoContainer {
    /*padding: 3rem; */
    width: 100%;
    position: relative;
    padding-bottom: 56.25%; /* 16:9 */
    padding-top: 25px;
    height: 0;
    margin: 2em 0;
}
/* ... */

